--- a/ReptileJava/pom.xml
+++ b/ReptileJava/pom.xml
@@ -20,6 +20,16 @@
 
 	<dependencies>
 		<dependency>
+    		<groupId>us.codecraft</groupId>
+    		<artifactId>webmagic-core</artifactId>
+    		<version>0.7.3</version>
+		</dependency>
+		<dependency>
+    		<groupId>us.codecraft</groupId>
+    		<artifactId>webmagic-extension</artifactId>
+    		<version>0.7.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
