--- a/ReptileJava/pom.xml
+++ b/ReptileJava/pom.xml
@@ -21,18 +21,10 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>us.codecraft</groupId>
-			<artifactId>webmagic-extension</artifactId>
-			<version>0.7.3</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.slf4j</groupId>
-					<artifactId>slf4j-log4j12</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>cn.wanghaomiao</groupId>
+			<artifactId>SeimiCrawler</artifactId>
+			<version>2.1.1</version>
 		</dependency>
-		
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
